--- a/Writing.html
+++ b/Writing.html
@@ -166,7 +166,7 @@ function ShowRadioButtonDiv (IdBaseName, NumberOfButtons) {
 								</p>
 							</DIV>
 										
-							<DIV ID="GroupName5Div" STYLE="display:block;" class="col-md-9">
+							<DIV ID="GroupName5Div" STYLE="display:none;" class="col-md-9">
 								<p class="animate-box">	
 								<h2>Presence and absence in James Coleman’s Lapsus Exposure</h2>
 								<p>James Coleman is one of Ireland’s greatest artists. He has achieved international acclaim, having exhibited extensively since the 1970s. According to Krauss, Coleman’s work belongs to a ‘post-medium age’, a period where the traditional media of painting and sculpture were rejected in favour of alternative modes of expression. One only needs to think of Donald Judd’s “Specific Objects’, promoting the new ‘three-dimensional works”, liberating artists from the limitations of being confined to a rectangular canvas of painting, and extending their work into the viewers’ realm of vision.</p>
@@ -179,7 +179,7 @@ function ShowRadioButtonDiv (IdBaseName, NumberOfButtons) {
 								<p>Irish authors have consistently reflected on the lack of familiarity with Coleman’s work in Ireland. An exhibition sheet on James Coleman’s work at the Douglas Hyde gallery in 1982 commented on Coleman’s international acclaim yet being relatively unknown in Ireland.[1] In 1998 Paula Murphy writing in the Irish Arts Review commented on the lack of progression since 1982, urging the next generation of Irish exhibition viewers and Irish artists to experience and assess the work of James Coleman. In 2020 not much has changed, Coleman still remains relatively unknown, perhaps this is due to Coleman working abroad for many years or due to Coleman’s relatively low profile maintained throughout the years.</p>
 								<p>Coleman is one of Ireland’s most talented living artists, this is due to his singular medium, creating a unique art form. As Coleman was not alone creating his own medium, his work is typically discussed in relation to other invented media, rather than comparing to works similar to his own, celebrating its uniqueness. Coleman’s work deserves to be brought into the public eye once again and celebrated.</p>
 							</DIV>
-							<DIV ID="GroupName1Div" STYLE="display:block;" class="col-md-9">
+							<DIV ID="GroupName1Div" STYLE="display:none;" class="col-md-9">
 								<p class="animate-box">	
 								<h2>Lee Krasner: Emerging from Darkness</h2>
 								<p>Lee Krasner was one of the most talented, influential artists working during the Twentieth Century. She is known to many as Mrs Jackson Pollock, due to her marriage to Abstract Expressionist Jackson Pollock, which has consistently overshadowed her artistic achievements. Krasner’s legacy is not her work, her being a feminist role model or her incredible self-belief as an artist, rather her marriage to Pollock. Let us remember Krasner was painting before Pollock, with Pollock and after Pollock.</p>
